# getindata-linserver

./: .gitignore  20_000_mil_podmorskiej_zeglugi.txt  Dockerfile  README.md  docker-compose.yml  gettindata-linserver.jmx  pom.xml  run-jmeter-test.cmd  run-jmeter-test.sh  run-performance-test.cmd  run-performance-test.sh  run.cmd  run.sh  small.txt  test.txt
docker-jmeter/: gettindata-linserver.jmx  run.cmd  run.sh
go-test/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  endpoints.go  go.mod  main.go  main_test.go  search.go  tests.http
kotlin-test/: .gitignore  pom.xml
kotlin-test/src/main/kotlin/com/slupicki/getindatalinserverkotlin/: GetindataLinserverKotlinApplication.kt
kotlin-test/src/test/kotlin/com/slupicki/getindatalinserverkotlin/: GetindataLinserverKotlinApplicationTests.kt
rust-test/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run-performance-test.cmd  run-performance-test.sh  tests.http
rust-test/src/: main.rs
src/main/java/com/slupicki/linserver/: Application.java  AsyncController.java  IndexSearchServiceImpl.java  NotFoundException.java  PerformanceTest.java  SearchService.java  SourceText.java  TreeSearchServiceImpl.java
src/test/: scratch.http
src/test/java/com/slupicki/linserver/: AbstractSearchServiceTest.java  ApplicationTests.java  IndexSearchServiceTest.java  SearchServiceTest.java  TreeSearchServiceTest.java
