[package]
name = "getindata-linserver-rust-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stopwatch = "0.0.7"
num-format = "0.4.0"
itertools = "0.10.1"
rocket = "0.5.0-rc.1"
lazy_static = "1.4.0"

[profile.test]
opt-level = 3